--- a/solution/index.html
+++ b/solution/index.html
@@ -6,20 +6,42 @@
     <link rel="stylesheet" href="styles/bootstrap.min.css">
     <link rel="stylesheet" href="styles/styles.css">
   </head>
-<body>
-   <div class="container">
-    <h1>Narrow Down Your Chinese Menu Choice</h1>
-
-    <div class="form-group">
-      <input type="text" placeholder="search term" class="form-control">
-    </div>
-    <div class="form-group narrow-button">
-      <button class="btn btn-primary">Narrow It Down For Me!</button>
-    </div>
-
-    <!-- found-items should be implemented as a component -->
-    <found-items found-items="...." on-remove="...."></found-items>
+<body data-ng-app="NarrowItDown">
+<div class="container" data-ng-controller="NarrowItDownCtrl as ctrl">
+  <h1>Narrow Down Your Chinese Menu Choice</h1>
+  <div>
+      <p>
+          <span data-ng-hide="ctrl.found">Type search term and press the button! Note: search is <strong>case sensitive</strong></span>
+          <span data-ng-show="ctrl.found.length!=0">Items:<span class="badge">{{ctrl.found.length}}</span></span>
+          <span class="label label-danger" data-ng-if="ctrl.found.length==0">Nothing found</span>
+      </p>
   </div>
+  <div class="form-group">
+    <input type="text" 
+        placeholder="search for dish name" 
+        class="form-control"
+        data-ng-model='ctrl.searchTerm'>
+
+    <button class="btn btn-primary"
+        data-ng-click="ctrl.getMatchedMenuItems()"
+      >Narrow It Down For Me!</button>
+
+  </div>
+  
+  <p class="row"></p>  
+  <!-- found-items should be implemented as a component -->
+  <!-- on-remove="...."-->
+  <found-items 
+    menu-items="ctrl.found"
+    on-remove="ctrl.removeItem(id)" 
+    class="row"></found-items>
+  
+</div>
+
+<!-- ANGULAR JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular.min.js"></script>
+<!-- APP -->
+<script src="js/app.js"></script>
 
 </body>
 </html>
