--- a/solution/index.html
+++ b/solution/index.html
@@ -11,14 +11,16 @@
   <h1>Narrow Down Your Chinese Menu Choice</h1>
   <div>
       <p>
-          <span data-ng-hide="ctrl.found">Type search term and press the button! Note: search is <strong>case sensitive</strong></span>
-          <span data-ng-show="ctrl.found.length!=0">Items:<span class="badge">{{ctrl.found.length}}</span></span>
+          <span data-ng-hide="ctrl.found">
+            Type search term and press the button! Note: search is <strong>case sensitive</strong>. Try 'Egg' or 'egg'.
+          </span>
+          <span data-ng-show="ctrl.found">Items:<span class="badge">{{ctrl.found.length}}</span></span>
           <span class="label label-danger" data-ng-if="ctrl.found.length==0">Nothing found</span>
       </p>
   </div>
   <div class="form-group">
     <input type="text" 
-        placeholder="search for dish name" 
+        placeholder="search for part of dish name" 
         class="form-control"
         data-ng-model='ctrl.searchTerm'>
 
