--- a/solution/index.html
+++ b/solution/index.html
@@ -20,7 +20,7 @@
   </div>
   <div class="form-group">
     <input type="text" 
-        placeholder="search for part of dish name" 
+        placeholder="search for dish name" 
         class="form-control"
         data-ng-model='ctrl.searchTerm'>
 
