search changed to lowercase

--- a/solution/index.html
+++ b/solution/index.html
@@ -12,7 +12,7 @@
   <div>
       <p>
           <span data-ng-hide="ctrl.found">
-            Type search term and press the button! Note: search is <strong>case sensitive</strong> ('Egg' != 'egg').
+            Type search term and press the button!
           </span>
           <span data-ng-show="ctrl.found">Items: <span class="badge">{{ctrl.found.length}}</span></span>
           <span class="label label-danger" data-ng-if="ctrl.found.length==0">Nothing found</span>
